examples/test/testpolicy18923.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18923
  namespace: namespace398
spec:
  podSelector:
    matchLabels:
      key32: value25
      key43: value12
      key12: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value23
          key48: value29
      podSelector:
        matchLabels:
          key32: value7
          key47: value41
          key3: value28
